# gameboy

./: .gitignore  Cargo.toml
etc/: opcodes.json  opsgen.py
src/: constants.rs  cpu.rs  definition.rs  disasm.rs  emulator.rs  instruction_set.rs  instructions.rs  interrupts.rs  lcd.rs  lib.rs  main.rs  memory.rs  ops.rs  test_helpers.rs  timer.rs
src/debugger/: dbg.rs  main.rs  mod.rs
src/debugger/commands/: breakpoint.rs  cont.rs  exit.rs  info.rs  list.rs  mod.rs  next.rs  print.rs  restart.rs
src/operations/: adc.rs  add.rs  and.rs  bit.rs  call.rs  ccf.rs  cp.rs  cpl.rs  daa.rs  dec.rs  di.rs  ei.rs  halt.rs  inc.rs  jp.rs  jr.rs  ld.rs  ldd.rs  ldh.rs  ldi.rs  load.rs  mod.rs  nop.rs  or.rs  pop.rs  push.rs  res.rs  ret.rs  reti.rs  rl.rs  rla.rs  rlc.rs  rlca.rs  rr.rs  rra.rs  rrc.rs  rrca.rs  rst.rs  sbc.rs  scf.rs  (+8 more)
