[package]
name = "gameboy"
version = "0.1.0"
authors = ["Carl Ekerot <kalle@implode.se>"]

[dependencies]
error-chain = "0.11.0"

[dependencies.sdl2]
version = "0.31"
default-features = false
features = ["gfx"]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "debugger"
path = "src/debugger/main.rs"
